--- a/index.html
+++ b/index.html
@@ -7,71 +7,73 @@
     <title>מוניות פסגת זאב</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-image: url('https://www.transparenttextures.com/patterns/cream-pixels.png');
-            background-color: #fff8e1;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #fff8e1;
             margin: 0;
             padding: 0;
             color: #333;
         }
         header {
-            background: linear-gradient(90deg, #ffeb3b, #ffc107);
-            padding: 1.5rem;
+            background: #fdd835;
+            color: #000;
+            padding: 2rem;
             text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         header h1 {
             margin: 0;
-            font-size: 2.5rem;
-            color: #d32f2f;
+            font-size: 2.8rem;
         }
         header h2 {
-            margin: 0.5rem 0 0 0;
-            font-size: 1.3rem;
+            margin: 1rem 0 0;
+            font-size: 1.4rem;
         }
         .buttons {
-            margin-top: 1rem;
+            margin-top: 1.5rem;
         }
         .buttons a {
             display: inline-block;
             margin: 0.5rem;
-            padding: 0.7rem 1.2rem;
-            background: #4caf50;
-            color: white;
+            padding: 0.8rem 1.5rem;
+            background: #fbc02d;
+            color: black;
             text-decoration: none;
-            border-radius: 8px;
+            border-radius: 10px;
             font-weight: bold;
             transition: background 0.3s;
         }
         .buttons a:hover {
-            background: #45a049;
+            background: #f9a825;
         }
         .buttons a.call {
-            background: #ff9800;
+            background: #43a047;
+            color: white;
         }
         .buttons a.call:hover {
-            background: #fb8c00;
+            background: #388e3c;
         }
         .image-container {
             text-align: center;
-            margin-top: 1rem;
+            margin: 1.5rem auto;
         }
         .image-container img {
-            width: 90%;
-            max-width: 600px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            width: 100%;
+            max-width: 900px;
+            border-radius: 15px;
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
         }
         section {
-            padding: 1.5rem;
-            background-color: rgba(255, 255, 255, 0.9);
-            margin: 1rem auto;
-            max-width: 800px;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+            padding: 2rem;
+            background: white;
+            margin: 1.5rem auto;
+            max-width: 900px;
+            border-radius: 12px;
+            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.1);
+        }
+        section h3 {
+            color: #fdd835;
         }
         footer {
-            background: #eee;
+            background: #eeeeee;
             padding: 1rem;
             text-align: center;
             font-size: 0.9rem;
@@ -106,13 +108,40 @@
             color: #0f0 !important;
             border: 1px solid #0f0;
         }
+        .services-list {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-top: 1.5rem;
+        }
+        .service-item {
+            border: 1px solid #fdd835;
+            border-radius: 10px;
+            padding: 1rem;
+            background-color: #fffde7;
+        }
+        .lang-switch {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background: #fff;
+            border-radius: 10px;
+            padding: 0.5rem 1rem;
+            font-size: 0.9rem;
+            font-weight: bold;
+            color: #333;
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            cursor: pointer;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
     <div class="accessibility-toggle" onclick="toggleAccessibility()">נגישות</div>
+    <div class="lang-switch" onclick="window.location.href='1   §   .html'">English</div>
     <header>
         <h1>מוניות פסגת זאב</h1>
-        <h2>מוניות שמביאות אותך ליעד בבטחה ובנוחות!</h2>
+        <h2>מוניות שמביאות אותך ליעד בבטחה, בנוחות ובמקצועיות מעל 40 שנה!</h2>
         <div class="buttons">
             <a href="https://wa.me/972543119830" target="_blank">שלחו הודעה בוואטסאפ</a>
             <a href="tel:0543119830" class="call">התקשרו עכשיו</a>
@@ -120,19 +149,20 @@
     </header>
 
     <div class="image-container">
-        <!--img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/auto-1868726_960_720.jpg" alt="מונית"-->
-        <img src="https://media.istockphoto.com/id/1298649757/photo/london-black-cab-taxi-sign.jpg?s=1024x1024&w=is&k=20&c=P_lfN5nz2IcLO7l2QAKDYU1bI5S2X7oYM-k9zG2fNZA=" alt="מונית2">
+        <img src="https://cdn.pixabay.com/photo/2017/03/12/14/41/taxi-2131363_1280.jpg" alt="מונית">
     </div>
 
     <section>
-        <h3>שירותי המוניות שלנו</h3>
-        <p>
-            שירותי מוניות בין עירוניים לתושבי ירושלים והסביבה - מוניות קטנות וגדולות, מוניות מפוארות וממוזגות.<br>
-            נהגי מונית גוי שבת שעומדים לרשותכם!<br>
-            מוניות ספיישל לכל מקום בארץ, מוניות לנתב"ג, הסעות לטיולים, הסעות תיירים ועוד.<br>
-            אצלנו תוכלו ליהנות מנסיעה מהנה ובטוחה לכל יעד שתבחרו.<br>
-            להזמנת מונית חייגו כעת - שירות מעולה מובטח!
-        </p>
+        <h3>השירותים שלנו</h3>
+        <div class="services-list">
+            <div class="service-item">עבודה עם המגזר העסקי – הסעות לעובדים</div>
+            <div class="service-item">שירותי מוניות בין עירוניים</div>
+            <div class="service-item">מוניות לנתב"ג</div>
+            <div class="service-item">הסעות תיירים</div>
+            <div class="service-item">הסעות לטיולים</div>
+            <div class="service-item">הסעות לאירועים</div>
+            <div class="service-item">תיאום נסיעות מראש ותכנון מסלולים מותאמים</div>
+        </div>
     </section>
 
     <footer>
