--- a/index.html
+++ b/index.html
@@ -161,4 +161,36 @@
     </header>
 
     <div class="image-container">
-        <img src="https://cdn.pixabay.com/photo/2016/10/06/22/16/taxi
+        <img src="https://cdn.pixabay.com/photo/2016/10/06/22/16/taxi-1715460_1280.jpg" alt="מונית">
+    </div>
+
+    <section>
+        <h3>השירותים שלנו</h3>
+        <div class="services-list">
+            <div class="service-item">שירותי מוניות בין עירוניים</div>
+            <div class="service-item">נהגי מונית גוי שבת</div>
+            <div class="service-item">מוניות לנתב"ג</div>
+            <div class="service-item">הסעות תיירים</div>
+            <div class="service-item">הסעות לטיולים</div>
+            <div class="service-item">הסעות לאירועים</div>
+            <div class="service-item">עבודה עם המגזר העסקי – הסעות לעובדים</div>
+            <div class="service-item">תיאום נסיעות מראש ותכנון מסלולים מותאמים</div>
+        </div>
+        <div class="app-icons">
+            <a href="https://maps.app.goo.gl" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2991/2991231.png" alt="Google Maps"></a>
+            <a href="https://www.waze.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/888/888878.png" alt="Waze"></a>
+            <a href="https://www.gettaxi.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2965/2965567.png" alt="Gett"></a>
+        </div>
+    </section>
+
+    <footer>
+        &copy; 2025 מוניות פסגת זאב | כל הזכויות שמורות
+    </footer>
+
+    <script>
+        function toggleAccessibility() {
+            document.body.classList.toggle('high-contrast');
+        }
+    </script>
+</body>
+</html>
