--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </header>
 
     <div class="image-container">
-        <img src="https://cdn.pixabay.com/photo/2016/10/06/22/16/taxi-1715460_1280.jpg" alt="מונית">
+        <img src="https://images.pexels.com/photos/1521580/pexels-photo-1521580.jpeg" alt="מונית">
     </div>
 
     <section>
